--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             <div class="education-card">
                 <div class="icon school"></div>
                 <h3>Board of Secoundary Education </h3>
-                <p class="institution">Sri chaitanya Techno School, Tekkali</p>
+                <p class="institution">Sri chaitanya Techno School, Palasa</p>
                 <p class="score">GPA: 9.2/10 | 2018 - 2019</p>
             </div>
         </div>
