--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             <div class="education-card">
                 <div class="icon school"></div>
                 <h3>Board of Secoundary Education </h3>
-                <p class="institution">Sri chaitanya Techno School, Palasa</p>
+                <p class="institution">Sri chaitanya Techno School, Tekkali</p>
                 <p class="score">GPA: 9.2/10 | 2018 - 2019</p>
             </div>
         </div>
@@ -753,6 +753,26 @@
                             <span class="badge bg-teal text-white">grid</span>
                         <span class="badge bg-teal text-white">flex</span>
                         <span class="badge bg-teal text-white">git</span>
+                        </div>
+                        <div class="project-links d-flex gap-2">
+                            <a href="https://santhoshbagadi.github.io/portfolio/" target="_blank" class="btn btn-outline-teal btn-sm">View Live Demo</a>
+                            <a href="#" target="_blank" class="btn btn-outline-teal btn-sm">Project Source Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card project-card">
+                    <img src="git.png" alt="wheather" class="card-img-top">
+                    <div class="card-body">
+                        <h3 class="card-title h5 fw-bold">Github Users Search </h3>
+                        <p class="card-text text-muted">Users can search for GitHub profiles to view details like avatar, name, bio, repos, followers, and following in a styled card.   </p>
+                        <div class="d-flex flex-wrap gap-2">
+                            <span class="badge bg-teal text-white">HTML</span>
+                            <span class="badge bg-teal text-white">Tailwind CSS</span>
+                            <span class="badge bg-teal text-white">javascript</span>
+                        <span class="badge bg-teal text-white">Canvas API</span>
+                        <span class="badge bg-teal text-white">GitHub API</span>
                         </div>
                         <div class="project-links d-flex gap-2">
                             <a href="https://santhoshbagadi.github.io/portfolio/" target="_blank" class="btn btn-outline-teal btn-sm">View Live Demo</a>
