--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                         <span class="badge bg-teal text-white">GitHub API</span>
                         </div>
                         <div class="project-links d-flex gap-2">
-                            <a href="https://santhoshbagadi.github.io/portfolio/" target="_blank" class="btn btn-outline-teal btn-sm">View Live Demo</a>
+                            <a href="https://santhoshbagadi.github.io/github_users/" target="_blank" class="btn btn-outline-teal btn-sm">View Live Demo</a>
                             <a href="#" target="_blank" class="btn btn-outline-teal btn-sm">Project Source Code</a>
                         </div>
                     </div>
